--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.onboarding_nps
+/onboarding_nps
+
 
 # Spyder project settings
 .spyderproject
@@ -205,3 +208,7 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+*.csv
+*.xlsx
+*.json
